# azure-deployment-scripts

./: .env  README.md  pyproject.toml  run.py
deployment_scripts/: __init__.py
